--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -11,8 +11,8 @@ div.header-content {
     position: absolute;
     text-align: center;
     left: 50%;
-    top: 20%;
-    transform: translate(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
     max-width: 600px;
     width: 100%;
     z-index: 5;
