--- a/src/assets/css/login.css
+++ b/src/assets/css/login.css
@@ -4,7 +4,6 @@ div.header {
     width: 100%;
     height: 100vh;
     position: relative;
-    margin-bottom: 40px;
     display: block;
 }
 
@@ -12,8 +11,8 @@ div.header-content {
     position: absolute;
     text-align: center;
     left: 50%;
-    top: 20%;
-    transform: translate(-50%);
+    top: 50%;
+    transform: translate(-50%, -50%);
     max-width: 600px;
     width: 100%;
     z-index: 5;
