--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -18,3 +18,11 @@ h1.err, h2.err {
 a {
     text-decoration: none !important;
 }
+
+.loader {
+    position: absolute;
+    text-align: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
