--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -26,3 +26,15 @@ a {
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+a.nav-link {
+    color: rgba(255, 255, 255, 0.75) !important;
+}
+
+a.nav-link:hover {
+    color: rgba(255, 255, 255, 0.95) !important;
+}
+
+div.content {
+    margin-top: 80px;
+}
